# safeclaw

./: CHANGELOG.md  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml
.claude/: settings.local.json
docs/: api-reference.md  skill-authoring-guide.md
src/: config.rs  db.rs  error.rs  main.rs
src/agent/: mod.rs  personas.rs  sessions.rs  tick.rs
src/bridge/: adapters.rs  mcp.rs  mod.rs
src/dashboard/: handlers.rs  messaging_webhook.rs  mod.rs  oauth.rs  routes.rs  webhook.rs
src/llm/: context.rs  local.rs  ollama.rs  openrouter.rs
src/memory/: consolidation.rs  extraction.rs  knowledge.rs  mod.rs  user_model.rs
src/messaging/: discord.rs  email.rs  matrix.rs  mod.rs  rich.rs  slack.rs  telegram.rs
src/security/: mod.rs  sandbox.rs  seatbelt.rs  seccomp.rs
src/skills/: manager.rs
src/telegram/: commands.rs
src/tools/: cron.rs  delegate.rs  document.rs  email.rs  exec.rs  file.rs  goal.rs  image.rs  knowledge.rs  memory.rs  mod.rs  plan.rs  process.rs  screen.rs  sessions.rs  voice.rs
