[package]
name = "safeclaw"
version = "0.8.1"
edition = "2024"
description = "Sandboxed autonomous AI agent with tool execution, knowledge graph, and multi-interface control"

[features]
default = []
local = ["dep:llama-gguf"]
local-cuda = ["local", "llama-gguf/cuda"]
daimon = ["dep:daimon"]
browser = ["dep:chromiumoxide"]
discord = ["dep:serenity"]

[dependencies]

# Local LLM inference (optional — enabled with --features local)
llama-gguf = { version = "0.11.3", default-features = false, features = ["cpu"], optional = true }

# Agentic framework (optional — enabled with --features daimon)
daimon = { version = "0.16", default-features = false, features = ["macros", "mcp"], optional = true }

# Hardware-aware local LLM model recommendations
llmfit-core = "0.4"
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Misc
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
rust-embed = { version = "8", features = ["compression"] }

# Web tools
htmd = "0.1"

# Browser automation (Chrome DevTools Protocol) — optional, enable with --features browser
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }

# Archive extraction (skill import)
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Discord bot — optional, enable with --features discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"], optional = true }

# Cron scheduling
cron = "0.15"
dotenvy = "0.15.7"

# JWT auth for dashboard
jsonwebtoken = "9"

# ACME / Let's Encrypt TLS
rustls-acme = { version = "0.15", features = ["axum"] }
axum-server = "0.8"
rhai = { version = "1.24.0", features = ["sync"] }
hmac = "0.12.1"
sha1 = "0.10.6"
data-encoding = "2.10.0"
rand = "0.10.0"
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
base64 = "0.22"
urlencoding = "2"

# Unix process group management & sandboxing
[target.'cfg(unix)'.dependencies]
libc = "0.2"
rlimit = "0.10"

# Linux-only kernel sandboxing
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[dev-dependencies]
tempfile = "3"
